--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="row">
                             <div class="about-text padd-15">
                                 <h3>I'm Tulsi Tyagi a <span>web developer</span></h3>
-                                <p>I'm an MCA student at OER University with a strong background in Python, Django, and full-stack web development. I've completed internships in web design and development, and built real-world projects like a University Timetable Generator and Metro Route Optimizer. Passionate about coding, I've solved 350+ problems on GeeksforGeeks and LeetCode, and I enjoy turning ideas into functional, user-friendly applications.</p>
+                                <p>I'm an MCA student at COER University with a strong background in Python, Django, and full-stack web development. I've completed internships in web design and development, and built real-world projects like a University Timetable Generator and Metro Route Optimizer. Passionate about coding, I've solved 350+ problems on GeeksforGeeks and LeetCode, and I enjoy turning ideas into functional, user-friendly applications.</p>
                                  
                             </div>
                         </div>
