--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h3 class="my-profession">I'm a <span class="typing">Graphics Designer</span></h3>
                         <p>I am a passionate and dedicated Software Engineer with a strong foundation in Python, c++, and web development. 
                             I have experience working on projects involving full-stack development, data structures & algorithms, and machine learning concepts.</p>
-                            <a href="tulsityagi-resume.pdf" download class="btn">Download CV</a>
+                            <a href="TULSI-TYAGI.pdf" download class="btn">Download CV</a>
                     </div>
                     
                     <div class="home-img padd-15">
