--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                  <div class="row">
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, My name is <span class="name">TULSI TYAGI.</span></h3>
-                        <h3 class="my-profession">I'm a <span class="typing">Graphics Designer</span></h3>
+                        <h3 class="my-profession">I'm a <span class="typing">Full Stack developer</span></h3>
                         <p>I am a passionate and dedicated Software Engineer with a strong foundation in Python, c++, and web development. 
                             I have experience working on projects involving full-stack development, data structures & algorithms, and machine learning concepts.</p>
                             <a href="Tulsi-Tyagi Resume.pdf" download class="btn">Download CV</a>
